--- a/.gitignore
+++ b/.gitignore
@@ -28,13 +28,13 @@ parts/
 sdist/
 var/
 wheels/
-*.egg-info/
+*.egg-devices/
 .installed.cfg
 *.egg
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+#  before PyInstaller builds the exe, so as to inject date/other devices into it.
 *.manifest
 *.spec
 
